[package]
name = "foursquare"
version = "0.1.10"
authors = ["softprops <d.tangren@gmail.com>"]
description = "Rust interface for Foursquare"
documentation = "https://softprops.github.io/foursquare"
homepage = "https://github.com/softprops/foursquare"
repository = "https://github.com/softprops/foursquare"
keywords = ["hyper", "foursquare"]
license = "MIT"
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"

[badges]
travis-ci = { repository = "softprops/foursquare" }

[dev-dependencies]
env_logger = "0.3"
pretty_assertions = "0.4"

[dependencies]
derive_builder = "0.5"
futures = "0.1"
hyper = "0.11"
log = "0.3"
url = "1.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.5.1"
error-chain = "0.11"
tokio-core = "0.1"

[dependencies.hyper-tls]
optional = true
version = "0.1.2"

[features]
default = ["tls"]
tls = ["hyper-tls"]